# WalletAAR

./: README.md
CheckDid/: settings.gradle
CheckDid/app/: CMakeLists.txt  build.gradle
CheckDid/app/src/androidTest/java/org/elastos/checkdid/: ExampleInstrumentedTest.java
CheckDid/app/src/main/: AndroidManifest.xml
CheckDid/app/src/main/cpp/: BTCBase58.h  BTCKey.cpp  BTCKey.h  CheckDid.cpp  Key.cpp  Key.h  KeyTest.cpp  Utils.cpp  Utils.h
CheckDid/app/src/main/java/: DIDInspector.java
CheckDid/app/src/main/java/org/elastos/checkdid/: CheckDid.java  DIDInspector.java  MainActivity.java
CheckDid/app/src/main/res/values/: strings.xml
CheckDid/app/src/test/java/org/elastos/checkdid/: ExampleUnitTest.java
CheckDid/gradle/wrapper/: gradle-wrapper.properties
ElastosWallet/app/: build.gradle  maven-release-aar.gradle
ElastosWallet/app/src/main/: AndroidManifest.xml
ElastosWallet/app/src/main/cpp/: ElaDid.cpp  ElaDidManager.cpp  ElaIdChainSubWallet.cpp  ElaIdManagerFactory.cpp  ElaMainchainSubWallet.cpp  ElaMasterWallet.cpp  ElaMasterWalletManager.cpp  ElaSidechainSubWallet.cpp  ElaSubWallet.cpp
ElastosWalletTest/: build.gradle
ElastosWalletTest/app/: build.gradle
ElastosWalletTest/app/elastoswallet-debug/: build.gradle
ElastosWalletTest/app/src/main/: AndroidManifest.xml
ElastosWalletTest/gradle/wrapper/: gradle-wrapper.properties
ElastosWallet_Whole/: build.gradle
ElastosWallet_Whole/app/: CMakeLists.txt  build.gradle
ElastosWallet_Whole/app/src/main/: AndroidManifest.xml
TestOriSpvDID/app/: CMakeLists.txt  build.gradle
TestOriSpvDID/app/src/androidTest/java/org/elastos/testorispvdid/: ExampleInstrumentedTest.java
TestOriSpvDID/app/src/main/: AndroidManifest.xml
TestOriSpvDID/app/src/main/cpp/: CheckDid.cpp  ElaDid.cpp  ElaDidManager.cpp  ElaIdChainSubWallet.cpp  ElaIdManagerFactory.cpp  ElaMainchainSubWallet.cpp  ElaMasterWallet.cpp  ElaMasterWalletManager.cpp  ElaSidechainSubWallet.cpp  ElaSpv.cpp  ElaSubWallet.cpp  ElaUtils.cpp
TestOriSpvDID/app/src/main/cpp/DIDChecker/: BTCKey.cpp
TestOriSpvDID/app/src/main/cpp/DIDChecker/openssl/: opensslconf.h
TestOriSpvDID/app/src/main/cpp/did/include/: IdManagerFactory.h  ididManager.h
TestOriSpvDID/app/src/main/java/org/elastos/testorispvdid/: DIDInspector.java  ElastosWalletUtils.java  IDid.java  IDidManager.java  IIdChainSubWallet.java  IIdManagerCallback.java  IMainchainSubWallet.java  IMasterWallet.java  ISidechainSubWallet.java  ISubWallet.java  ISubWalletCallback.java  IdManagerFactory.java  MainActivity.java  MasterWalletManager.java  WalletException.java
TestOriSpvDID/app/src/main/res/values/: strings.xml
TestOriSpvDID/app/src/test/java/org/elastos/testorispvdid/: ExampleUnitTest.java
TestOriSpvDID/gradle/wrapper/: gradle-wrapper.properties
(+26 files in other folders)
